--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <link rel="stylesheet" href="/sites/haupt/styles.css" />
+  <link rel="stylesheet" href="/styles.css" />
   <title>Backfos</title>
 </head>
 <body>
@@ -14,14 +14,14 @@
   </div>
 
   <!-- iframe after entering -->
-  <iframe id="entry-frame" src="/sites/haupt/entry.html" style="display:none; width:100vw; height:100vh; border:none;"></iframe>
+  <iframe id="entry-frame" src="/entrypage.html" style="display:none; width:100vw; height:100vh; border:none;"></iframe>
 
   <!-- Audio Player -->
   <audio id="bg-music" loop></audio>
 
   <!-- Music Info Widget -->
   <div class="music-widget">
-    <img src="/sites/haupt/src/img/image.png" class="cover-art" />
+    <img src="/src/img/image.png" class="cover-art" />
     <div class="song-info">
       <span class="song-title"></span>
       <span class="song-artist"></span>
@@ -38,7 +38,7 @@
   <button id="top-btn">↑</button>
 
   <!-- Scripts -->
-  <script src="/sites/haupt/music.js"></script>
-  <script src="/sites/haupt/enter.js"></script>
+  <script src="/music.js"></script>
+  <script src="/enter.js"></script>
 </body>
 </html>
