--- a/entrypage.html
+++ b/entrypage.html
@@ -36,6 +36,13 @@
           <p>Clash of Clans moderation bot with application system, war tracking, CWL tools and more.</p>
           <a href="https://github.com/JelacicBan/OlujaBot" class="install-btn" target="_blank">View on GitHub</a>
         </div>
+
+        <div class="card">
+          <h3>DiscordNuker</h3>
+          <p>Discord bot project for server automation and management.</p>
+          <a href="https://github.com/JelacicBan/DiscordNuker" target="_blank" class="install-btn">View on GitHub</a>
+        </div>
+
       </div>
     </section>
 
