--- a/entrypage.html
+++ b/entrypage.html
@@ -43,6 +43,12 @@
           <a href="https://github.com/JelacicBan/DiscordNuker" target="_blank" class="install-btn">View on GitHub</a>
         </div>
 
+        <div class="card coming-soon">
+          <h3>AI Voice & Image Chatbot</h3>
+          <p>A next-level AI bot with voice commands and image recognition. Coming soon!</p>
+          <button disabled class="install-btn">Coming Soon</button>
+        </div>
+
       </div>
     </section>
 
