--- a/entrypage.html
+++ b/entrypage.html
@@ -43,7 +43,7 @@
           <a href="https://github.com/JelacicBan/DiscordNuker" target="_blank" class="install-btn">View on GitHub</a>
         </div>
 
-        <div class="card coming-soon">
+        <div class="card">
           <h3>AI Voice & Image Chatbot</h3>
           <p>A next-level AI bot with voice commands and image recognition. Coming soon!</p>
           <button disabled class="install-btn">Coming Soon</button>
