--- a/entrypage.html
+++ b/entrypage.html
@@ -28,19 +28,25 @@
         <div class="card">
           <h3>Multitool</h3>
           <p>Custom multitool with an integrated Discord selfbot.</p>
-          <a href="src/exe/main.exe" class="install-btn" download>Install</a>
+          <a href="src/exe/main.exe" class="install-btn" download>
+            <button disabled class="install-btn">Install</button>
+          </a>
         </div>
 
         <div class="card">
           <h3>Oluja DiscordBot</h3>
           <p>Clash of Clans moderation bot with application system, war tracking, CWL tools and more.</p>
-          <a href="https://github.com/JelacicBan/OlujaBot" class="install-btn" target="_blank">View on GitHub</a>
+          <a href="https://github.com/JelacicBan/OlujaBot" class="install-btn" target="_blank">
+            <button disabled class="install-btn">View on GitHub</button>
+          </a>
         </div>
 
         <div class="card">
           <h3>DiscordNuker</h3>
           <p>Discord bot project for server automation and management.</p>
-          <a href="https://github.com/JelacicBan/DiscordNuker" target="_blank" class="install-btn">View on GitHub</a>
+          <a href="https://github.com/JelacicBan/DiscordNuker" target="_blank" class="install-btn">
+            <button disabled class="install-btn">View on GitHub</button>
+          </a>
         </div>
 
         <div class="card">
