--- a/entrypage.html
+++ b/entrypage.html
@@ -25,34 +25,43 @@
     <section class="projects">
       <h2>Projects</h2>
       <div class="project-grid">
+
         <div class="card">
           <h3>Multitool</h3>
           <p>Custom multitool with an integrated Discord selfbot.</p>
-          <a href="src/exe/main.exe" class="install-btn" download>
-            <button disabled class="install-btn">Install</button>
-          </a>
+          <div class="card-footer">
+            <a href="src/exe/main.exe" class="install-btn" download>
+              <button disabled class="install-btn">Install</button>
+            </a>
+          </div>
         </div>
 
         <div class="card">
           <h3>Oluja DiscordBot</h3>
           <p>Clash of Clans moderation bot with application system, war tracking, CWL tools and more.</p>
-          <a href="https://github.com/JelacicBan/OlujaBot" class="install-btn" target="_blank">
-            <button disabled class="install-btn">View on GitHub</button>
-          </a>
+          <div class="card-footer">
+            <a href="https://github.com/JelacicBan/OlujaBot" class="install-btn" target="_blank">
+              <button disabled class="install-btn">View on GitHub</button>
+            </a>
+          </div>
         </div>
 
         <div class="card">
           <h3>DiscordNuker</h3>
-          <p>Discord bot project for server automation and management.</p>
-          <a href="https://github.com/JelacicBan/DiscordNuker" target="_blank" class="install-btn">
-            <button disabled class="install-btn">View on GitHub</button>
-          </a>
+          <p>Discord bot project for server destruction.</p>
+          <div class="card-footer">
+            <a href="https://github.com/JelacicBan/DiscordNuker" target="_blank" class="install-btn">
+              <button disabled class="install-btn">View on GitHub</button>
+            </a>
+          </div>
         </div>
 
         <div class="card">
           <h3>AI Voice & Image Chatbot</h3>
           <p>A next-level AI bot with voice commands and image recognition. Coming soon!</p>
-          <button disabled class="install-btn">Coming Soon</button>
+          <div class="card-footer">
+            <button disabled class="install-btn">Coming Soon</button>
+          </div>
         </div>
 
       </div>
