--- a/entrypage.html
+++ b/entrypage.html
@@ -31,7 +31,7 @@
           <p>Custom multitool with an integrated Discord selfbot.</p>
           <div class="card-footer">
             <a href="src/exe/main.exe" class="install-btn" download>
-              <button disabled class="install-btn">Install</button>
+              <button  class="install-btn">Install</button>
             </a>
           </div>
         </div>
@@ -41,7 +41,7 @@
           <p>Clash of Clans moderation bot with application system, war tracking, CWL tools and more.</p>
           <div class="card-footer">
             <a href="https://github.com/JelacicBan/OlujaBot" class="install-btn" target="_blank">
-              <button disabled class="install-btn">View on GitHub</button>
+              <button  class="install-btn">View on GitHub</button>
             </a>
           </div>
         </div>
@@ -51,7 +51,7 @@
           <p>Discord bot project for server destruction.</p>
           <div class="card-footer">
             <a href="https://github.com/JelacicBan/DiscordNuker" target="_blank" class="install-btn">
-              <button disabled class="install-btn">View on GitHub</button>
+              <button  class="install-btn">View on GitHub</button>
             </a>
           </div>
         </div>
